Updating case study content (through research phase)

--- a/index.html
+++ b/index.html
@@ -273,13 +273,7 @@
               Objectives
             </h3>
             <div class="maxWidth">
-              <p>As the COVID-19 virus overtook the world, many people found themselves worried and fearful for their
-                and their loved ones' lives. The race for a vaccine to alleviate the illness began immediately, and
-                people anxiously waited to get their hands on one. At the time that this project was in the works, there
-                were not enough vaccines to go around. Our team wanted to focus on providing vaccine information to
-                those in the state of Georgia where we live as various states provide such a feature that Georgia was,
-                at the time, lacking. Our app seeks to ease the process of determining whether vaccines are available in
-                the vicinity of people and where they can register to get one.
+              <p>As the COVID-19 virus overtook the world, many people found themselves worried for their lives and the lives of their loved ones. The race for a vaccine began immediately and the most susceptible of the population anxiously waited to get their hands on one. At the time that this project was in the works, vaccines were scarce, as supply had yet to meet demand. Because the State of Georgia had not released an application to the public to direct them to distributors of the vaccine, we decided to make a prototype to fill in that gap. Our app seeks to ease the search process of finding vaccine distributors while also providing notifications on the upcoming registration windows for those who wish to be vaccinated.
               </p>
             </div>
           </div>
@@ -365,15 +359,7 @@
                   User Research
                 </h3>
                 <div class="maxWidth">
-                  <p>We started researching users that this app would benefit, namely anyone who would be eligible to
-                    receive a COVID-19 vaccine within the next few months. Between a Google Form survey, four user
-                    interviews, and information gathered from social media and the news, we quickly pulled together
-                    features that people were looking for to alleviate the lack of communication about vaccines.
-                    In a perfect world, users wanted an app that would state who was eligible for the vaccine, with
-                    information about the different vaccines offered (Pfizer, Moderna, Johnson & Johnson), and ways
-                    to search for and be notified of vaccine availability at nearby venues. This was extremely important
-                    at the time because, according to the 21 surveys we received, over 90% of these users had not been
-                    inoculated against the virus by means of a vaccine yet.</p>
+                  <p>We started researching user pain points through an online survey, user interviews, social media, and the news. Users were targeted based on current and future eligibility for COVID-19 vaccines; this was done to potentially increase ‘herd immunity’ for Georgians at a faster rate, as these individuals would benefit the most from the vaccines. Out of all the pain points gathered, users wanted an app that would state who was eligible for the vaccine, where to find vaccine distributors, which vaccines were available nearby, and when they could register at nearby venues. This was extremely important at the time because, according to the information we received, over 90% of users hadn’t been inoculated against the virus by means of a vaccine yet.</p>
                 </div>
               </div>
             </div>
@@ -467,21 +453,7 @@
                   Competitive Analysis
                 </h3>
                 <div class="maxWidth">
-                  <p>Of the five direct competitors and two indirect that we looked at, we started with the Center for
-                    Disease Control and
-                    Prevention. More commonly known as the CDC, all of our participants at this stage, including those
-                    who filled out our survey, listed the CDC as the top organization to trust with matters concerning
-                    COVID-19. To understand what information was being offered to Georgian residents, we also chose to
-                    look at
-                    Georgia's Department of Public Health, local healthcare providers, and pharmaceutical clinics
-                    (WellStar,
-                    Walgreens, and Publix). Of the features made by the companies and government entities we studied,
-                    vaccine qualification status, general information about COVID, and vaccine locators were all used.
-                    <br>
-                    <br>
-                    Our two indirect competitors, Virginia's COVIDwise app and Rhode Island's Crush COVID app, included
-                    features that we chose not to build on (namely contact tracing), but their respective user insights
-                    helped guide how we designed the funtionality of our site for users.
+                  <p>As we were starting an app from scratch, the three of us separately researched applications and websites that provided vaccine information. On a macro level, the Center for Disease Control and Prevention (CDC) was at the top of our list because over 60% of our users ranked it the most trustworthy for reliable COVID-19 information. On a micro level, we chose to look at companies that affected Georgians specifically (the Georgia Department of Public Health, WellStar, Walgreens, and Publix). Common features included highlighting vaccine eligibility, showcasing locations for distribution, informing the public on vaccine availability, and emailing users information. While we chose not to include features found on Virginia's COVIDwise app or Rhode Island's Crush COVID app, we pulled insights from online reviews, which helped us design the sitemap of our site.
                   </p>
                 </div>
               </div>
@@ -541,16 +513,7 @@
                   User Pain Points
                 </h3>
                 <div class="maxWidth">
-                  <p>Through our individual discussions with users and our 21 survey results, we discovered how, as a
-                    whole, users struggled to find vaccine locations if they did not have either their workplace
-                    advocating on their behalf or their general practitioner to take the initial step in registering
-                    them
-                    for the first vaccine. Places such as Walgreens, CVS, and Publix only had enough vaccines available
-                    for a set number of the public and healthcare practitioners like WellStar would only register
-                    patients
-                    in groups to ensure there was enough vaccine for both doses for a single individual. Therefore, the
-                    main user
-                    pain point centered around supply and demand.</p>
+                  <p>As a whole, users fell into two camps: those whose doctor or employer registered them for the vaccine and those who had to register themselves. Self-registered users struggled to find vaccine suppliers because distributors (Walgreens, Publix, WellStar, CVS, etc.) were limiting registration to keep second vaccine doses available for those who had received their first shot already. Therefore, the main user pain point centered around supply and demand.</p>
                 </div>
                 <br>
               </div>
