--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
               Objectives
             </h3>
             <div class="maxWidth">
-              <p>As the COVID-19 virus overtook the world, many people found themselves worried for their lives and the lives of their loved ones. The race for a vaccine began immediately and the most susceptible of the population anxiously waited to get their hands on one. At the time that this project was in the works, vaccines were scarce, as supply had yet to meet demand. Because the State of Georgia had not released an application to the public to direct them to distributors of the vaccine, we decided to make a prototype to fill in that gap. Our app seeks to ease the search process of finding vaccine distributors while also providing notifications on the upcoming registration windows for those who wish to be vaccinated.
+              <p>As the COVID-19 virus overtook the world, many people found themselves worried for their lives and the lives of their loved ones. The race for a vaccine began immediately and the most susceptible of the population anxiously waited to get their hands on one. At the time that this project was in the works, vaccines were scarce, as supply had yet to meet demand. 
+                <br>
+                <br>Because the State of Georgia had not released an application to the public to direct them to distributors of the vaccine, we decided to make a prototype to fill in that gap. Our app seeks to ease the search process of finding vaccine distributors while also providing notifications on the upcoming registration windows for those who wish to be vaccinated.
               </p>
             </div>
           </div>
@@ -359,7 +361,9 @@
                   User Research
                 </h3>
                 <div class="maxWidth">
-                  <p>We started researching user pain points through an online survey, user interviews, social media, and the news. Users were targeted based on current and future eligibility for COVID-19 vaccines; this was done to potentially increase ‘herd immunity’ for Georgians at a faster rate, as these individuals would benefit the most from the vaccines. Out of all the pain points gathered, users wanted an app that would state who was eligible for the vaccine, where to find vaccine distributors, which vaccines were available nearby, and when they could register at nearby venues. This was extremely important at the time because, according to the information we received, over 90% of users hadn’t been inoculated against the virus by means of a vaccine yet.</p>
+                  <p>We started researching user pain points through an online survey, user interviews, social media, and the news. Users were targeted based on current and future eligibility for COVID-19 vaccines; this was done to potentially increase ‘herd immunity’ for Georgians at a faster rate, as these individuals would benefit the most from the vaccines. 
+                    <br>
+                    <br>Out of all the pain points gathered, users wanted an app that would state who was eligible for the vaccine, where to find vaccine distributors, which vaccines were available nearby, and when they could register at nearby venues. This was extremely important at the time because, according to the information we received, over 90% of users hadn’t been inoculated against the virus by means of a vaccine yet.</p>
                 </div>
               </div>
             </div>
@@ -453,7 +457,9 @@
                   Competitive Analysis
                 </h3>
                 <div class="maxWidth">
-                  <p>As we were starting an app from scratch, the three of us separately researched applications and websites that provided vaccine information. On a macro level, the Center for Disease Control and Prevention (CDC) was at the top of our list because over 60% of our users ranked it the most trustworthy for reliable COVID-19 information. On a micro level, we chose to look at companies that affected Georgians specifically (the Georgia Department of Public Health, WellStar, Walgreens, and Publix). Common features included highlighting vaccine eligibility, showcasing locations for distribution, informing the public on vaccine availability, and emailing users information. While we chose not to include features found on Virginia's COVIDwise app or Rhode Island's Crush COVID app, we pulled insights from online reviews, which helped us design the sitemap of our site.
+                  <p>As we were starting an app from scratch, the three of us separately researched applications and websites that provided vaccine information. On a macro level, the Center for Disease Control and Prevention (CDC) was at the top of our list because over 60% of our users ranked it the most trustworthy for reliable information. 
+                    <br>
+                    <br>On a micro level, we chose to look at companies that affected Georgians specifically (the Georgia Department of Public Health, WellStar, Walgreens, and Publix). Common features included highlighting vaccine eligibility, showcasing locations for distribution, informing the public on vaccine availability, and emailing users information. While we chose not to include features found on Virginia's COVIDwise app or Rhode Island's Crush COVID app, we pulled insights from online reviews, which helped us design the sitemap of our site.
                   </p>
                 </div>
               </div>
@@ -543,16 +549,10 @@
                   Research Data Analysis
                 </h3>
                 <div class="maxWidth">
-                  <p>Users were having a hard time finding clinics with the vaccine, making appointments, and
-                    determining which vaccine they would receive. Since users should not have to waste time trying
-                    to find information and sign up to be vaccinated, we decided to help by simplifying the location
-                    and registration process.
+                  <p>After much deliberation, we each came to the conclusion that it was unrealistic of us to tackle registering Georgians on behalf of distributors; vaccines were being used so quickly that we would still have a supply and demand problem, similar to overselling seats on an airline. We thought it best to be a supplier of information instead, allowing users to track registration windows for themselves or loved ones.
                     <br>
                     <br>
-                    By allowing users to search by county and zip code, notifying them when vaccines are available in
-                    their area and when they themselves are eligible to get one, supplying information regarding COVID
-                    and the different vaccines available, and registering for a vaccine, our product could potentially
-                    increase public health awareness of the COVID-19 vaccine and get more people vaccinated.
+                    Users should not have to waste time trying to find information and sign up to be vaccinated. Therefore, we decided to simplify the registration process by giving users the tools to search for vaccines nearby, break down discrepancies between vaccines, and sign up for notifications on registration windows. 
                   </p>
                 </div>
               </div>
