Updating text and resume

--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
                   Competitive Analysis
                 </h3>
                 <div class="maxWidth">
-                  <p>As we were starting an app from scratch, the three of us separately researched applications and websites that provided vaccine information. On a macro level, the Center for Disease Control and Prevention (CDC) was at the top of our list because over 60% of our users ranked it the most trustworthy for reliable information. 
+                  <p>As we were starting an app from scratch, the three of us separately researched applications and websites that provided vaccine information. On a macro level, the Center for Disease Control and Prevention (CDC) was at the top of our list because over 60% of our users ranked it the most trustworthy for reliable information. On a micro level, we chose to look at companies that affected Georgians specifically (the Georgia Department of Public Health, WellStar, Walgreens, and Publix). 
                     <br>
-                    <br>On a micro level, we chose to look at companies that affected Georgians specifically (the Georgia Department of Public Health, WellStar, Walgreens, and Publix). Common features included highlighting vaccine eligibility, showcasing locations for distribution, informing the public on vaccine availability, and emailing users information. While we chose not to include features found on Virginia's COVIDwise app or Rhode Island's Crush COVID app, we pulled insights from online reviews, which helped us design the sitemap of our site.
+                    <br>Common features included highlighting vaccine eligibility, showcasing locations for distribution, informing the public on vaccine availability, and emailing users information. While we chose not to include features found on Virginia's COVIDwise app or Rhode Island's Crush COVID app, we pulled insights from online reviews, which helped us design the sitemap of our site.
                   </p>
                 </div>
               </div>
@@ -519,7 +519,7 @@
                   User Pain Points
                 </h3>
                 <div class="maxWidth">
-                  <p>As a whole, users fell into two camps: those whose doctor or employer registered them for the vaccine and those who had to register themselves. Self-registered users struggled to find vaccine suppliers because distributors (Walgreens, Publix, WellStar, CVS, etc.) were limiting registration to keep second vaccine doses available for those who had received their first shot already. Therefore, the main user pain point centered around supply and demand.</p>
+                  <p>As a whole, users fell into two camps: those whose doctor or employer registered them for the vaccine and those who had to register themselves. Self-registered users struggled to find vaccine suppliers because distributors (Walgreens, Publix, WellStar, etc.) were limiting registration to keep second vaccine doses available for those who had received their first shot already. Therefore, the main user pain point centered around supply and demand.</p>
                 </div>
                 <br>
               </div>
@@ -550,9 +550,6 @@
                 </h3>
                 <div class="maxWidth">
                   <p>After much deliberation, we each came to the conclusion that it was unrealistic of us to tackle registering Georgians on behalf of distributors; vaccines were being used so quickly that we would still have a supply and demand problem, similar to overselling seats on an airline. We thought it best to be a supplier of information instead, allowing users to track registration windows for themselves or loved ones.
-                    <br>
-                    <br>
-                    Users should not have to waste time trying to find information and sign up to be vaccinated. Therefore, we decided to simplify the registration process by giving users the tools to search for vaccines nearby, break down discrepancies between vaccines, and sign up for notifications on registration windows. 
                   </p>
                 </div>
               </div>
