--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
           <li class="show rounded nav-item mt-4" action="images/Resume2021.pdf">
             <a class="btn button nav-link" id="dropdownMenuLink" role="button"
-              href="../COVID_Crushers/images/Sydney Hembree Resume 2021 UXUI_01.pdf">Resume</a>
+              href="../COVID_Crushers/images/Sydney Hembree Resume 2022.pdf">Resume</a>
           </li>
         </ul>
       </div>
